2004-06-21 Hoda Amer
	Fix for PR 67696: [I18N] - New Class Wizard does not take project encoding into account when creating files
	Now the encoding is taken into consideration when committing a working copy contents to a file.
	* model/org/eclipse/cdt/internal/core/model/Buffer.java
	* model/org/eclipse/cdt/internal/core/model/WorkingCopy.java
	
2004-06-18 Alain Magloire

	Fix for PR 66108

2004-06-18 Alain Magloire

	This was heavy and lots of files were change.  The problem: to create the CElementInfo we use
	to synchronize of the CModelManager singleton instance, this was handy and allowed us to serialize
	the creation of the proxy info and save in the LRU cache.  Then came Eclipse-3.0 with job spawning
	everywhere, lots of deadlock since the CModelManager was lock and the singleton is the center
	to get all the info.  We use the same scheme as the JDT by using a ThreadLocal class cache
	to collect the information.  We fixed a couple of bug allong the way and probably introduce some.

	The tests were doing something stupid, by creating directly the TranslationUnit:
		new TranslationUnit(project, file);
	This does not work since only the sourceRoot can be the parent
	of a TranslationUnit, the tests are now fix bug we should restrict access of the class in the core model
	after 2.0.

2004-06-18 Andrew Niefer
	- DeltaProcessor.updateIndexRemoveResource() : discard if removing a project, discard index jobs for that project.

2004-06-15 Hoda Amer
	Fix for PR 63207:  ITranslationUnit.getElementAtOffset(i) does not factor in multiple namespace decl
	
2004-06-14 Hoda Amer
	Fix for PR 63243: [Outline View] Missing user defined type if declare variable along with the C++ elem (struct, enum, union)
	
2004-06-11 Alain Magloire

	The IncludeEntry LibraryEntry getFullIncludePath()
	was returning the wrong values sometimes.

	* model/org/eclipse/cdt/internal/core/model/IncludeEntry.java
	* model/org/eclipse/cdt/internal/core/model/LibraryEntry.java