@@ -36,6 +36,11 @@ public interface IMacroEntry extends IPathEntry {
 	IPath[] getExclusionPatterns();
 
 	/**
+	 * Returns a char based representation of the exclusions patterns full path.
+	 */
+	public char[][] fullExclusionPatternChars();
+
+	/**
 	 * Return the base path.
 	 * @return
 	 */
